samples/negative/cycle_a.inc
(* $I samples/negative/cycle_b.inc *)
const
  ACONST = 1;
